@@ -41,6 +41,8 @@ apport (0.146) UNRELEASED; urgency=low
   * apport/crashdb_impl/launchpad.py, update(): Intercept and ignore IOErrors
     when changing the bug priority. This happens if a bug gets duplicated
     underneath us. (LP: #349407)
+  * apport/crashdb.py, get_crashdb(): Print syntax errors from parsing
+    conf.d/*.conf to stderr.
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 12 Mar 2009 12:22:50 +0100
 
